<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.profile.EditProfileBasic">

    <data>

        <import type="android.text.TextUtils" />

        <import type="com.commdel.carservicewale.util.UtilHandler" />

        <variable
            name="fragment"
            type="com.commdel.carservicewale.ui.fragments.profile.EditProfileBasic" />

        <variable
            name="model"
            type="com.commdel.carservicewale.ui.fragments.profile.EditProfileBasicViewModel" />

    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/basic_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingBottom="20dp"
                tools:context=".activity.profile.fragments.basic.EditProfileBasicFragment">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/first_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/first_name"
                    android:textColorHint="@color/black"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="@color/purpleNew"
                    app:boxStrokeErrorColor="@color/error_red"
                    app:counterOverflowTextColor="@color/purpleNew"
                    app:errorIconDrawable="@null"
                    app:errorTextColor="@color/error_red"
                    app:hintTextColor="@color/purpleNew"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:fontFamily="@font/montserrat_medium"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName|textCapWords"
                        android:maxLength="@integer/first_last_name_length"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@={model.firstName}"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/user_last_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/last_name"
                    android:textColorHint="@color/black"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="@color/purpleNew"
                    app:boxStrokeErrorColor="@color/error_red"
                    app:counterOverflowTextColor="@color/purpleNew"
                    app:errorIconDrawable="@null"
                    app:errorTextColor="@color/error_red"
                    app:hintTextColor="@color/purpleNew"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/first_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:fontFamily="@font/montserrat_medium"
                        android:imeOptions="actionDone"
                        android:inputType="textPersonName|textCapSentences"
                        android:maxLength="@integer/first_last_name_length"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@={model.lastName}"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_dob"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/date_of_birth"
                    android:inputType="date"
                    android:textColorHint="@color/black"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="@color/purpleNew"
                    app:boxStrokeErrorColor="@color/error_red"
                    app:counterOverflowTextColor="@color/purpleNew"
                    app:endIconDrawable="@drawable/ic_date"
                    app:endIconTint="@color/black"
                    app:errorIconDrawable="@null"
                    app:errorTextColor="@color/error_red"
                    app:hintTextColor="@color/purpleNew"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_last_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:fontFamily="@font/montserrat_medium"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        tools:drawableEnd="@drawable/ic_date" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_gender"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/gender"
                    android:textColorHint="@color/black"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="@color/purpleNew"
                    app:boxStrokeErrorColor="@color/error_red"
                    app:counterOverflowTextColor="@color/purpleNew"
                    app:errorIconDrawable="@null"
                    app:errorTextColor="@color/error_red"
                    app:hintTextColor="@color/purpleNew"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_dob">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:enabled="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@{UtilHandler.getGenderFullName(model.gender)}"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        tools:drawableRight="@drawable/ic_right"
                        tools:ignore="Deprecated" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save"
                style="@style/NewNowNowButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/dimen_30"
                android:clickable="false"
                android:editable="false"
                android:ellipsize="end"
                android:focusableInTouchMode="false"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:inputType="number"
                android:longClickable="false"
                android:maxLength="10"
                android:padding="14dp"
                android:singleLine="true"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_16"
                android:visibility="visible"
                app:decorTypefaceAsset="@string/robotoMedium"
                tools:ignore="Deprecated" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</layout>



